# KSRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake.yml
Application/: CMakeLists.txt  main.cpp  test.cpp
KSWindow/: CMakeLists.txt
KSWindow/include/: KSWindow.h
KSWindow/include/njk/: cvvc.txt
KSWindow/src/: KSWindow.cpp
Renderer/: CMakeLists.txt
Renderer/include/: Renderer.h
Renderer/shader/: shader.metal
Renderer/src/: Renderer.cpp
imgui/: CMakeLists.txt
imgui/include/: imconfig.h
source/: main.cpp
